# jcpu-rust

./: .gitignore  Cargo.toml  README.md  boot.img  instructions.d  main.img  main.jsm  notes.txt
examples/: addition.jsm
jcpu/: Cargo.toml
jcpu-compiler/: Cargo.toml
jcpu-compiler/src/: lexer.rs  main.rs  parser.rs  structures.rs
jcpu-instructions/: Cargo.toml
jcpu-instructions/src/: lib.rs
jcpu-sim/: Cargo.toml
jcpu-sim/src/: main.rs  sim.rs
jcpu/src/: alu.rs  cpu.rs  helpers.rs  instructions.d  lib.rs  motherboard.rs  peripheral.rs  ram.rs
